@@ -14,10 +14,10 @@ index f1335f6b95..6d311793da 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 78e4028936..50ca44e785 100644
+index 178c75f22f..d93034f0e1 100644
 --- a/Changes
 +++ b/Changes
-@@ -1439,11 +1439,6 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1443,11 +1443,6 @@ OCaml 5.0.0 (15 December 2022)
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index 78e4028936..50ca44e785 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -1472,6 +1467,30 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1476,6 +1471,30 @@ OCaml 5.0.0 (15 December 2022)
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -60,7 +60,7 @@ index 78e4028936..50ca44e785 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -1507,13 +1526,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1511,13 +1530,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -76,7 +76,7 @@ index 78e4028936..50ca44e785 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1620,6 +1639,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1624,6 +1643,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -86,7 +86,7 @@ index 78e4028936..50ca44e785 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1883,6 +1905,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1887,6 +1909,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10128,7 +10128,7 @@ index 0000000000..c55951ffb0
 +                 -e 's/\d027\[m/\d027[0m/g' \
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..5f854fd4c3
+index 0000000000..dfe8d55c5b
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10128 @@
@@ -10148,10 +10148,10 @@ index 0000000000..5f854fd4c3
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 78e4028936..50ca44e785 100644
++index 178c75f22f..d93034f0e1 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -1439,11 +1439,6 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1443,11 +1443,6 @@ OCaml 5.0.0 (15 December 2022)
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10163,7 +10163,7 @@ index 0000000000..5f854fd4c3
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -1472,6 +1467,30 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1476,6 +1471,30 @@ OCaml 5.0.0 (15 December 2022)
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10194,7 +10194,7 @@ index 0000000000..5f854fd4c3
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -1507,13 +1526,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1511,13 +1530,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10210,7 +10210,7 @@ index 0000000000..5f854fd4c3
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1620,6 +1639,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1624,6 +1643,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10220,7 +10220,7 @@ index 0000000000..5f854fd4c3
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1883,6 +1905,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1887,6 +1909,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
